styles/case-study-styles.css
body {
  background-color: var(--paper);
}

main {
  contain: paint;
}

section {
  min-height: 80vh;
  padding-top: 8rem;
  padding-bottom: 8rem;
}

section.tan {
  background-color: var(--silcrow-000);
}

section.paper {
  background-color: var(--paper);
}

section.gallery-cta {
  background-color: var(--double-dagger-100);
}

section h2 {
  margin-bottom: 0.3em;
}

section h3 {
  margin-top: 2em;
}

.diagram {
  position: relative;
  height: 1080px;
  padding-top: 40px;
  padding-bottom: 40px;
}

.diagram .info {
  position: absolute;
  top: 0;
  z-index: 10;
  height: 100%;  
  padding-top: 25vh;
  padding-bottom: 33vh;
}

.diagram .illustration {
  position: sticky;
  width: 100%;
  top: 25%;
  z-index: 1;
  transition: 0.2s ease-out;
}

.diagram .illustration img {
  transform: scale(200%);
  transform-origin: center left;
}

.diagram .info-card {
  border-radius: 20px;
  box-shadow: 0px 11px 14px rgba(233, 226, 222, 0.5);
  padding: 24px;
}

.sr-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0); 
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap; 
  width: 1px;
}

.diagram .info-card .dropcap {
  font-family: Dropcaps;
  float: left;
  font-size: 2.8rem;
  font-weight: 900;
  line-height: 0.6;
  margin: 0.4em 0.1em 0.07em 0;
  padding: 0.1em 0.1em 0.1em 0;
  text-shadow: -1px 1px 0 var(--silcrow), 1px 1px 0 var(--silcrow), 1px -1px 0 var(--silcrow), -1px -1px 0 var(--silcrow);
}

.dropcap:before, .dropcap:after {
  content: "";
  display: block;
}

.dropcap:before {
  margin-top: -0.2em;
}

.dropcap:after {
  margin-bottom: -0.15em;
}

.tan .info-card {
  background-color: var(--paper);
}

.tan .dropcap {
  color: var(--paper);
}

.paper .info-card {
  background-color: var(--silcrow-050);
}

.paper .dropcap {
  color: var(--silcrow-050);
}

.testimonial figure blockquote .quotemark {
  content: "";
  background-color: var(--silcrow-500);
  -webkit-mask-image: url("../images/icon-testimonial-quotemark.svg");
  mask-image: var(--testimonial-quotemark-svg);
  position: absolute;
  mask-repeat: no-repeat;
  mask-size: 15px 11px;
  width: 15px;
  height: 11px;
}

.testimonial figure blockquote .quotemark.open { 
  transform: translate(-140%, 30%);
}

.testimonial figure blockquote .quotemark.close { 
  transform: translate(40%, 30%) rotate(180deg);
}

.testimonial figure figcaption {
  border-top: 1px solid var(--silcrow-500);
  padding-top: 20px;
}

.summary h2 {
  margin-bottom: 24px;
}

.summary .credits ul li {
  padding: 1em 0;
  border-top: 1px solid var(--ink-100);
  display: flex;
  justify-content: space-between;
}

.summary .credits ul li:last-child {
  border-bottom: 1px solid var(--ink-100);
}

.summary .credits ul li .name {
  font-style: italic;
}

@media (min-width: 640px) {
  
  .diagram .info-card {
    padding: 50px;
  }
  
  .diagram .illustration img {
    transform: scale(200%) translateX(25%);
  }
  
}

@media (min-width: 800px) {
  
  .diagram {
    padding-top: 20px;
    padding-bottom: 20px;
  }
  
  .diagram .illustration img {
    transform: scale(120%) translateX(0);
  }
  
  section h3 {
    margin-top: 4em;
    margin-bottom: 2em;
  }
  
}

@media (min-width: 900px) {
  
  section {
    min-height: 100vh;
  }
  
  .diagram {
    padding-top: 0;
    padding-bottom: 0;
  }
  
  .diagram .illustration img {
    transform: scale(110%) translateX(0);
  }
  
  .summary h2 {
    border-top: 1px solid var(--ink-100);
    padding-top: 20px;
  }
  
  .summary .credits ul li {
    padding: 1.35em 0;
  }
  
}

@media (min-width: 1920px) {
  
  section h3 {
    margin-top: 6em;
  }
  
  .testimonial figure blockquote .quotemark {
    mask-size: 31px 23px;
    width: 31px;
    height: 23px;
  }
  
}

